--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,9 @@ a:hover {text-decoration: none;}
 
 
 
-
+h3 {
+  margin:30px 0 30px 0;
+}
 
 
 
@@ -89,4 +91,24 @@ a:hover {text-decoration: none;}
 
 .dropzone, .dropzone * {
   box-sizing: border-box;
+}
+
+
+
+
+ul.nav > li, ul.nav > li > a {
+  border-color: #f6d27c;
+  background-color: #f6d27c;
+  text-decoration: none;
+  border-radius: 4px;
+}
+ul.nav > li:hover, ul.nav > li > a:hover {
+  border-color: #fc951f;
+  background-color: #fc951f;
+}
+
+
+.map-canvas {
+  width: 100%;
+  height: 474px;
 }
